<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E83D3D"
    android:backgroundTint="#B2EA93"
    android:textAlignment="center"
    tools:context=".SecondActivity">

    <ImageButton
        android:id="@+id/mExitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#C62C61"
        android:contentDescription="@string/zamknij_app"
        android:tint="#2B2B2B"
        app:srcCompat="@android:drawable/ic_lock_power_off" />

    <TextView
        android:id="@+id/textView3"
        android:layout_gravity="center"
        android:layout_width="305dp"
        android:layout_height="63dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/na_pocz_tek_podaj_kilka_informacji_o_sobie"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/twoja_waga_w_kilogramach"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/editText"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_width="351dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="@drawable/edit_bg"
        android:inputType="numberDecimal"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/tw_j_wzrost_w_cm"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/editText2"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_width="351dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="@drawable/edit_bg"
        android:inputType="numberDecimal"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btm_bg"
        android:text="@string/oblicz"
        android:textColor="#fafafa"
        android:onClick="calculateBMI"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tekstNadWynik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/buttonStart"
        android:textSize="25sp"
        android:text="@string/twoje_bmi_wynosi"
        android:textColor="#000"
        />

    <TextView
        android:id="@+id/wynik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" "
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textColor="#000"
        android:textSize="25sp"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="125dp"
        android:background="@drawable/btm_bg"
        android:text="ZRESETUJ"
        android:textColor="#fafafa"
        android:onClick=" //funkcja"
        tools:ignore="MissingConstraints" />



</androidx.appcompat.widget.LinearLayoutCompat>